--- a/shared/src/Annium.Components.State/Annium.Components.State.csproj
+++ b/shared/src/Annium.Components.State/Annium.Components.State.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Data.Models" Version="0.1.0" />
         <PackageReference Include="Annium.Extensions.Primitives" Version="0.1.0" />
+        <PackageReference Include="Annium.Extensions.Validation" Version="0.1.0" />
         <PackageReference Include="NodaTime" Version="3.0.0" />
         <PackageReference Include="System.Reactive" Version="4.4.1" />
     </ItemGroup>
