--- a/web/src/Annium.Blazor.Ant/Annium.Blazor.Ant.csproj
+++ b/web/src/Annium.Blazor.Ant/Annium.Blazor.Ant.csproj
@@ -8,7 +8,7 @@
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
-        <IsPackable>false</IsPackable>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
         <RazorLangVersion>3.0</RazorLangVersion>
     </PropertyGroup>
