--- a/shared/test/Annium.Components.State.Tests/Annium.Components.State.Tests.csproj
+++ b/shared/test/Annium.Components.State.Tests/Annium.Components.State.Tests.csproj
@@ -16,6 +16,7 @@
         <ProjectReference Include="../../src/Annium.Components.State/Annium.Components.State.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Localization.InMemory" Version="0.1.0" />
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
