--- a/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
+++ b/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
@@ -13,14 +13,11 @@
         <RazorLangVersion>3.0</RazorLangVersion>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="../Annium.Blazor.Css/Annium.Blazor.Css.csproj" />
         <ProjectReference Include="../../../shared/src/Annium.Components.State/Annium.Components.State.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="BlazorStyled" Version="3.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.5" />
-    </ItemGroup>
-    <ItemGroup>
-        <_ContentIncludedByDefault Remove="Components\Sample.razor" />
     </ItemGroup>
 </Project>
