--- a/shared/src/Annium.Components.State.Form/Annium.Components.State.Form.csproj
+++ b/shared/src/Annium.Components.State.Form/Annium.Components.State.Form.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>Annium.Components.State</PackageId>
+        <PackageId>Annium.Components.State.Form</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
-        <Description>Annium.Components.State</Description>
+        <Description>Annium.Components.State.Form</Description>
         <TargetFramework>netstandard2.1</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
