--- a/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
+++ b/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../Annium.Blazor.Css/Annium.Blazor.Css.csproj" />
-        <ProjectReference Include="../../../shared/src/Annium.Components.State/Annium.Components.State.csproj" />
+        <ProjectReference Include="../../../shared/src/Annium.Components.State.Form/Annium.Components.State.Form.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
