--- a/shared/src/Annium.Components.State.Form/Annium.Components.State.Form.csproj
+++ b/shared/src/Annium.Components.State.Form/Annium.Components.State.Form.csproj
@@ -12,6 +12,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="../Annium.Components.State.Core/Annium.Components.State.Core.csproj" />
+    </ItemGroup>
+    <ItemGroup>
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Data.Models" Version="0.1.0" />
         <PackageReference Include="Annium.Extensions.Primitives" Version="0.1.0" />
