--- a/shared/src/Annium.Components.State.Operations/Annium.Components.State.Operations.csproj
+++ b/shared/src/Annium.Components.State.Operations/Annium.Components.State.Operations.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>Annium.Components.State.Operation</PackageId>
+        <PackageId>Annium.Components.State.Operations</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
-        <Description>Annium.Components.State.Operation</Description>
+        <Description>Annium.Components.State.Operations</Description>
         <TargetFramework>netstandard2.1</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
