Components.State.Core: add ObservableState

--- a/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
+++ b/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
@@ -11,4 +11,7 @@
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="System.Reactive" Version="4.4.1" />
+    </ItemGroup>
 </Project>
