--- a/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
+++ b/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
@@ -12,6 +12,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Core.Reflection" Version="0.1.0" />
         <PackageReference Include="System.Reactive" Version="4.4.1" />
     </ItemGroup>
 </Project>
