--- a/shared/test/Annium.Components.State.Forms.Tests/Annium.Components.State.Forms.Tests.csproj
+++ b/shared/test/Annium.Components.State.Forms.Tests/Annium.Components.State.Forms.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>Annium.Components.State.Form.Tests</PackageId>
+        <PackageId>Annium.Components.State.Forms.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Components.State.Form.Tests</Description>
         <TargetFramework>netcoreapp3.1</TargetFramework>
