--- a/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
+++ b/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
@@ -12,7 +12,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="annium.net.http" Version="0.1.0" />
+        <PackageReference Include="Annium.Net.Http" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     </ItemGroup>
 </Project>
