Blazor.Net: make published

--- a/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
+++ b/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
@@ -8,7 +8,7 @@
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
-        <IsPackable>false</IsPackable>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
