--- a/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
+++ b/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
@@ -12,8 +12,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Serialization.Abstractions" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
     </ItemGroup>
 </Project>
