--- a/shared/src/Annium.Components.State/Annium.Components.State.csproj
+++ b/shared/src/Annium.Components.State/Annium.Components.State.csproj
@@ -3,7 +3,7 @@
         <PackageId>Annium.Components.State</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Components.State</Description>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
