--- a/web/src/Annium.Blazor.Ant/Annium.Blazor.Ant.csproj
+++ b/web/src/Annium.Blazor.Ant/Annium.Blazor.Ant.csproj
@@ -3,14 +3,13 @@
         <PackageId>Annium.Blazor.Ant</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Ant</Description>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
-        <RazorLangVersion>3.0</RazorLangVersion>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
