--- a/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
+++ b/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
@@ -3,7 +3,7 @@
         <PackageId>Annium.Blazor.Storage</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Storage</Description>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
