--- a/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
+++ b/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
@@ -3,7 +3,7 @@
         <PackageId>Annium.Blazor.Core.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Core.Tests</Description>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
         <LangVersion>latest</LangVersion>
@@ -11,7 +11,6 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <Nullable>enable</Nullable>
-        <RazorLangVersion>3.0</RazorLangVersion>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../../src/Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
