--- a/web/src/Annium.Blazor.Css/Annium.Blazor.Css.csproj
+++ b/web/src/Annium.Blazor.Css/Annium.Blazor.Css.csproj
@@ -6,14 +6,14 @@
         <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.9" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
     </ItemGroup>
 </Project>
