--- a/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
+++ b/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
@@ -6,7 +6,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
@@ -14,6 +14,6 @@
     <ItemGroup>
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Serialization.Abstractions" Version="0.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
     </ItemGroup>
 </Project>
