--- a/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
+++ b/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
@@ -6,7 +6,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
@@ -18,7 +18,7 @@
     <ItemGroup>
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     </ItemGroup>
