--- a/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
+++ b/web/src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj
@@ -12,7 +12,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
+        <PackageReference Include="Annium.Core.Runtime" Version="0.1.0" />
         <PackageReference Include="Annium.Serialization.Abstractions" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
     </ItemGroup>
