--- a/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
+++ b/shared/src/Annium.Components.State.Core/Annium.Components.State.Core.csproj
@@ -3,10 +3,10 @@
         <PackageId>Annium.Components.State.Core</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Components.State.Core</Description>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
-        <LangVersion>preview</LangVersion>
+        <LangVersion>9.0</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
