--- a/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
+++ b/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
+        <PackageReference Include="Annium.Testing.Lib" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
