--- a/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
+++ b/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
@@ -8,13 +8,14 @@
         <DebugType>portable</DebugType>
         <LangVersion>10.0</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
-        <IsPackable>false</IsPackable>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../../src/Annium.Blazor.Ant/Annium.Blazor.Ant.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Css/Annium.Blazor.Css.csproj" />
+        <ProjectReference Include="../../src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Net/Annium.Blazor.Net.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj" />
