Demo.Blazor.Charts: fix Packable

--- a/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
+++ b/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
@@ -8,7 +8,7 @@
         <DebugType>portable</DebugType>
         <LangVersion>10.0</LangVersion>
         <WarningsAsErrors>true</WarningsAsErrors>
-        <IsPackable>true</IsPackable>
+        <IsPackable>false</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
