--- a/web/src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj
+++ b/web/src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj
@@ -14,6 +14,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
+        <PackageReference Include="Annium.Extensions.Reactive" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
         <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.8.2" />
     </ItemGroup>
