--- a/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
+++ b/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
@@ -13,10 +13,12 @@
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
+        <ProjectReference Include="../Annium.Blazor.Css/Annium.Blazor.Css.csproj" />
         <ProjectReference Include="../Annium.Blazor.Interop/Annium.Blazor.Interop.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Extensions.Jobs" Version="0.1.0" />
         <PackageReference Include="Annium.NodaTime.Extensions" Version="0.1.0" />
+        <PackageReference Include="OneOf" Version="3.0.223" />
     </ItemGroup>
 </Project>
