--- a/web/demo/Demo.Blazor.Interop/Demo.Blazor.Interop.csproj
+++ b/web/demo/Demo.Blazor.Interop/Demo.Blazor.Interop.csproj
@@ -12,24 +12,23 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="../../src/Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Css/Annium.Blazor.Css.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj" />
-        <ProjectReference Include="..\..\src\Annium.Blazor.Core\Annium.Blazor.Core.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Logging.Console" Version="0.1.0" />
         <PackageReference Include="Annium.Logging.Microsoft" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" />
     </ItemGroup>
     <ItemGroup>
-      <AdditionalFiles Include="Pages\Canvas\Page.razor" />
+        <AdditionalFiles Include="Pages\Canvas\Page.razor" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Components\Navigation\Navigation.razor.cs">
-        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      </Content>
+        <Content Include="Components\Navigation\Navigation.razor.cs">
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        </Content>
     </ItemGroup>
 </Project>
