--- a/web/src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj
+++ b/web/src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj
@@ -11,6 +11,7 @@
         <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
         <TypeScriptToolsVersion>4.5</TypeScriptToolsVersion>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
