--- a/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
+++ b/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
@@ -15,6 +15,7 @@
         <ProjectReference Include="../../../shared/src/Annium.Components.State.Forms/Annium.Components.State.Forms.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Configuration.Abstractions" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     </ItemGroup>
 </Project>
