--- a/web/src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj
+++ b/web/src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj
@@ -12,9 +12,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Annium" Version="0.1.0" />
         <PackageReference Include="Annium.Core.DependencyInjection" Version="0.1.0" />
         <PackageReference Include="Annium.Core.Mapper" Version="0.1.0" />
-        <PackageReference Include="Annium.Core.Primitives" Version="0.1.0" />
         <PackageReference Include="Annium.Core.Runtime" Version="0.1.0" />
         <PackageReference Include="Annium.Data.Models" Version="0.1.0" />
         <PackageReference Include="Annium.Net.Base" Version="0.1.0" />
