--- a/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
+++ b/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
@@ -17,7 +17,7 @@
         <ProjectReference Include="../../src/Annium.Blazor.Interop/Annium.Blazor.Interop.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Net/Annium.Blazor.Net.csproj" />
         <ProjectReference Include="../../src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj" />
-        <ProjectReference Include="../../src/Annium.Blazor.Storage/Annium.Blazor.Storage.csproj" />
+        <ProjectReference Include="../../src/Annium.Blazor.State/Annium.Blazor.State.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Logging.Console" Version="0.1.0" />
