--- a/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
+++ b/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageId>Annium.Blazor.Storage</PackageId>
+        <PackageId>Annium.Blazor.State</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Storage</Description>
         <TargetFramework>net7.0</TargetFramework>
