--- a/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
+++ b/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
@@ -17,6 +17,7 @@
         <ProjectReference Include="../Annium.Blazor.Interop/Annium.Blazor.Interop.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Data.Models" Version="0.1.0" />
         <PackageReference Include="Annium.Extensions.Jobs" Version="0.1.0" />
         <PackageReference Include="Annium.NodaTime.Extensions" Version="0.1.0" />
         <PackageReference Include="OneOf" Version="3.0.223" />
