--- a/web/src/Annium.Blazor.MatBlazor/Annium.Blazor.MatBlazor.csproj
+++ b/web/src/Annium.Blazor.MatBlazor/Annium.Blazor.MatBlazor.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
+        <ProjectReference Include="../../../shared/src/Annium.Components.State/Annium.Components.State.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="MatBlazor" Version="2.8.0" />
