--- a/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
+++ b/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
@@ -12,6 +12,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="../../../shared/src/Annium.Components.State/Annium.Components.State.csproj" />
+    </ItemGroup>
+    <ItemGroup>
         <PackageReference Include="Annium.Core.Runtime" Version="0.1.0" />
         <PackageReference Include="Annium.Serialization.Abstractions" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
