--- a/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
+++ b/web/src/Annium.Blazor.State/Annium.Blazor.State.csproj
@@ -12,7 +12,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="../../../shared/src/Annium.Components.State/Annium.Components.State.csproj" />
+        <ProjectReference Include="../../../shared/src/Annium.Components.State.Forms/Annium.Components.State.Forms.csproj" />
+        <ProjectReference Include="../../../shared/src/Annium.Components.State.Operations/Annium.Components.State.Operations.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Core.Runtime" Version="0.1.0" />
