--- a/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
+++ b/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
@@ -20,8 +20,10 @@
         <ProjectReference Include="../../src/Annium.Blazor.State/Annium.Blazor.State.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Data.Operations.Serialization.Json" Version="0.1.0" />
         <PackageReference Include="Annium.Logging.Console" Version="0.1.0" />
         <PackageReference Include="Annium.Logging.Microsoft" Version="0.1.0" />
+        <PackageReference Include="Annium.NodaTime.Serialization.Json" Version="0.1.0" />
         <PackageReference Include="Annium.Serialization.Json" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" />
