--- a/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
+++ b/web/src/Annium.Blazor.Net/Annium.Blazor.Net.csproj
@@ -12,6 +12,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Annium.Core.Runtime" Version="0.1.0" />
         <PackageReference Include="Annium.Net.Http" Version="0.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
     </ItemGroup>
