--- a/shared/test/Annium.Components.Operations.Tests/Annium.Components.Operations.Tests.csproj
+++ b/shared/test/Annium.Components.Operations.Tests/Annium.Components.Operations.Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
+        <PackageReference Include="Annium.Testing.Lib" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
         <PackageReference Include="xunit" Version="2.5.0" />
