--- a/shared/test/Annium.Components.State.Forms.Tests/Annium.Components.State.Forms.Tests.csproj
+++ b/shared/test/Annium.Components.State.Forms.Tests/Annium.Components.State.Forms.Tests.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
         <PackageReference Include="Annium.Localization.InMemory" Version="0.1.0" />
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
+        <PackageReference Include="Annium.Testing.Lib" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
         <PackageReference Include="xunit" Version="2.5.0" />
