--- a/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
+++ b/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
+        <PackageReference Include="Annium.Testing.Lib" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
