--- a/shared/test/Annium.Components.Operations.Tests/Annium.Components.Operations.Tests.csproj
+++ b/shared/test/Annium.Components.Operations.Tests/Annium.Components.Operations.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <PackageId>Annium.Components.Operations.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
