--- a/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
+++ b/web/src/Annium.Blazor.Core/Annium.Blazor.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <PackageId>Annium.Blazor.Core</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
