--- a/web/src/Annium.Blazor.MatBlazor/Annium.Blazor.MatBlazor.csproj
+++ b/web/src/Annium.Blazor.MatBlazor/Annium.Blazor.MatBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <PackageId>Annium.Blazor.MatBlazor</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
