--- a/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
+++ b/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <PackageId>Annium.Blazor.Charts.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
