--- a/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
+++ b/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <PackageId>Annium.Blazor.Routing.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
