--- a/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
+++ b/web/test/Annium.Blazor.Core.Tests/Annium.Blazor.Core.Tests.csproj
@@ -16,7 +16,7 @@
         <ProjectReference Include="../../src/Annium.Blazor.Core/Annium.Blazor.Core.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Annium.Testing.Assertions" Version="0.1.0" />
+        <PackageReference Include="Annium.Testing" Version="0.1.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
         <PackageReference Include="xunit" Version="2.5.0" />
