--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -38,8 +38,8 @@ jobs:
             exit 1
           fi
 
-      - name: Lint docs
-        run: make docs-lint
+#      - name: Lint docs
+#        run: make docs-lint
 
       - name: Build
         run: make build
@@ -55,8 +55,8 @@ jobs:
           path: '**/*.trx'
           retention-days: 30
 
-      - name: Build Documentation
-        run: make docs-build
+#      - name: Build Documentation
+#        run: make docs-build
 
   report:
     runs-on: ubuntu-latest
