--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -12,8 +12,18 @@ permissions:
   pull-requests: write
 
 jobs:
+  init:
+    runs-on: ubuntu-latest
+    outputs:
+      run_ci: ${{ steps.check.outputs.run_ci }}
+    steps:
+      - name: Check if CI should run
+        id: check
+        run: echo "run_ci=${{ !contains(github.event.pull_request.title, 'skip ci') }}" >> $GITHUB_OUTPUT
+
   build:
     runs-on: ubuntu-latest
+    needs: init
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,29 +49,32 @@ jobs:
           fi
 
 #      - name: Lint docs
+#        if: ${{ needs.init.outputs.run_ci == 'true' }}
 #        run: make docs-lint
 
       - name: Build
         run: make build
 
       - name: Test
+        if: ${{ needs.init.outputs.run_ci == 'true' }}
         run: make test
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
-        if: always()
+        if: ${{ always() && needs.init.outputs.run_ci == 'true' }}
         with:
           name: test-results
           path: '**/*.trx'
           retention-days: 30
 
 #      - name: Build Documentation
+#        if: ${{ needs.init.outputs.run_ci == 'true' }}
 #        run: make docs-build
 
   report:
     runs-on: ubuntu-latest
-    needs: [ build ]
-    if: always()
+    needs: [ init, build ]
+    if: ${{ always() && needs.init.outputs.run_ci == 'true' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
