fix webassembly references

--- a/web/src/Annium.Blazor.Css/Annium.Blazor.Css.csproj
+++ b/web/src/Annium.Blazor.Css/Annium.Blazor.Css.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Annium.Core.Runtime" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
   </ItemGroup>
 </Project>
