--- a/web/src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj
+++ b/web/src/Annium.Blazor.Routing/Annium.Blazor.Routing.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Annium.Data.Models" />
     <PackageReference Include="Annium.Net.Base" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" />
   </ItemGroup>
 </Project>
