--- a/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
+++ b/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Annium.Testing" />
     <PackageReference Include="coverlet.collector" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="xunit.v3" />
