--- a/web/src/Annium.Blazor.Interop/tsconfig.json
+++ b/web/src/Annium.Blazor.Interop/tsconfig.json
@@ -16,10 +16,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ES6"
+    "target": "ES6",
+    "outDir": "wwwroot"
   },
   "include": [
-    "wwwroot/**/*.ts"
+    "scripts/**/*.ts"
   ],
   "exclude": [
     "node_modules"
